--- a/Week1/Index/Week1Homework.html
+++ b/Week1/Index/Week1Homework.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/Week1/css/styleSheet.css" type="text/css" />
-  <title>SheCodes</title>
-</head>
-<body>
-
-    <div id="PageInfo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Week1/css/styleSheet.css" type="text/css" />
+    <title>SheCodes</title>
+  </head>
+  <body>
+    <ul>
+      <div id="PageInfo">
         <h1 id="heading">🌥️</h1>
-            <h1 id="heading">Currently 21° in Tokyo</h1>
-        <h1>  21° / 
-            <strong> 23° </strong> </h1>
-    </div>
+        <h1 id="heading">Currently 21° in Tokyo</h1>
+        <h1>21° / <strong> 23° </strong></h1>
+      </div>
 
-    <br>
+      <li>
+        <h2>🌧️ Tomorrow</h2>
+        10° /
+        <strong> 22° </strong>
+      </li>
 
-    <div>
-        <h2>🌧️ Tommorrow </h2>
-            <p> 10° /
-                <strong> 22° </strong> </p>
-    </div>
+      <li>
+        <h2>🌥️ Saturday</h2>
+        15° /
+        <strong> 17° </strong>
+      </li>
 
-    <br>
+      <li>
+        <h2>☀️ Sunday</h2>
+        25° /
+        <strong> 28°</strong>
+      </li>
+    </ul>
 
-    <div>
-        <h2> 🌥️ Saturday </h2>
-            <p> 15° / 
-                <strong> 17° </strong> </p>
-    </div>
-
-    <br>
-
-    <div>
-        <h2>☀️ Sunday </h2>
-            <p> 25° / 
-                <strong> 28°</strong>  </p>
-    </div>
-
-    <br>
-
-    <div> 
-        <button class="changeCity">
-            Change City
-        </button>
-    </div>
-
-    <br>
+    <button class="changeCity">Change City</button>
 
     <footer>
-        <p> Coded by Sumayya Allana </p>
+      <p>Coded by Sumayya Allana</p>
     </footer>
-
-</body>
+  </body>
 </html>
