--- a/Week1/Index/Week1Homework.html
+++ b/Week1/Index/Week1Homework.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Week1/css/styleSheet.css" type="text/css" />
     <title>SheCodes</title>
   </head>
   <body>
@@ -39,5 +38,63 @@
     <footer>
       <p>Coded by Sumayya Allana</p>
     </footer>
+
+    <style>
+      body {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #heading {
+    color: rgb(78, 78, 255);
+    }
+
+    h2 {
+    font-size: large ;
+    }
+
+    ul {
+    text-align: center;
+    list-style-type: none;
+    }
+
+    li {
+    text-align: center;
+    padding-top: 1.5vw;
+    padding-bottom: 3vw;
+    }
+
+    li:hover {
+    text-align: center;
+    display: block;
+    border-style:hidden;
+    background-color: rgb(248, 233, 221);
+    padding-top: 1.5vw;
+    padding-bottom: 3vw;
+
+  }
+
+  button {
+    display: block;
+    margin: 0 auto;
+    padding: 3vw;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    border-style:solid;
+    border-radius: 25%;
+    background-color: blue;
+    color: aliceblue;
+  }
+
+  button:hover{
+    background-color:white ;
+    color: black;
+  }
+
+  footer {
+    padding: 5vw;
+  }
+    </style>
+    
   </body>
 </html>
